cli/kubernetes/istio/telemetry/grafana/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15031
        name: http-grafana
        protocol: HTTP
      hosts:
        - "telemetry.edoxa.gg"
