cli/kubernetes/istio/telemetry/grafana/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - "telemetry.edoxa.gg"
  gateways:
    - grafana-gateway
  http:
    - match:
        - port: 15031
      route:
        - destination:
            host: grafana
            port:
              number: 3000
